--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+	font-family: 'Bebas';
+	src: url(./fonts/BebasNeue-Regular.ttf);
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	src: url(./fonts/OpenSans-Regular.ttf);
+	font-display: swap;
+}
+
+body {
+	font-family: 'Open Sans';
 }
