--- a/src/components/css/landing.css
+++ b/src/components/css/landing.css
@@ -60,6 +60,13 @@
 
 .setup {
 	background-image: url('../../img/fullHD/setup_1920.jpg');
+	background-image: linear-gradient(
+			135deg,
+			rgba(0, 161, 255, 0.4) 0%,
+			rgba(195, 21, 21, 0.2) 65%,
+			rgba(247, 255, 0, 0.2) 100%
+		),
+		url('../../img/fullHD/setup_1920.jpg');
 	background-position: center center;
 	background-size: cover;
 	height: 100vh;
@@ -73,9 +80,10 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: #fff;
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba(20, 20, 20, 0.8);
 	border-radius: 5px;
 	padding: 2rem;
+	box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.65);
 }
 
 .setup-box h2 {
@@ -84,7 +92,7 @@
 
 .upper-p {
 	font-size: 2rem;
-	margin-top: -1rem;
+	margin: -1rem 0 1rem 0;
 }
 
 .lower-p {
