--- a/src/components/css/dashboard.css
+++ b/src/components/css/dashboard.css
@@ -1,6 +1,6 @@
 .dashboard-container {
 	width: 100%;
-	height: 200px;
+	height: 350px;
 	background-color: #000;
 	background-image: linear-gradient(
 			180deg,
@@ -30,5 +30,10 @@
 	bottom: 100%;
 	background-color: rgba(0, 0, 0, 0.8);
 	cursor: pointer;
+	color: #fff;
+}
+
+.dashboard-data {
+	display: flex;
 	color: #fff;
 }
