animations with framer motion on single-page

--- a/src/components/css/landing.css
+++ b/src/components/css/landing.css
@@ -1,3 +1,7 @@
+body {
+	background-color: #000;
+}
+
 .intro {
 	background-image: url('../../img/fullHD/landing_1920.jpg');
 	background-position: center center;
