--- a/src/components/css/landing.css
+++ b/src/components/css/landing.css
@@ -123,6 +123,8 @@ body {
 	margin-top: 1rem;
 	font-size: 1rem;
 	font-family: 'Open Sans';
+	cursor: pointer;
+	text-decoration: underline;
 }
 
 .setup-footer {
