--- a/src/components/css/landing.css
+++ b/src/components/css/landing.css
@@ -119,6 +119,20 @@ body {
 	margin: -1rem 0 1rem 0;
 }
 
+.set-airport-form {
+	display: flex;
+	flex-direction: column;
+}
+
+.set-airport-input {
+	height: 40px;
+}
+
+.set-airport-button {
+	padding: 10px 15px 10px 15px;
+	border-radius: 2px;
+}
+
 .lower-p {
 	margin-top: 1rem;
 	font-size: 1rem;
