--- a/src/components/css/landing.css
+++ b/src/components/css/landing.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #000;
+	overflow: hidden;
 }
 
 .intro {
@@ -163,4 +164,39 @@ body {
 	display: flex;
 	justify-content: center;
 	gap: 3rem;
+}
+
+.login-icon {
+	position: absolute;
+	transform: translate(-30vw, 50vh) rotate(90deg);
+	transform-origin: center center;
+	transition: all 4s ease-in-out;
+}
+
+.logo-icon-anim {
+	transform: translate(100vw, 50vh) rotate(90deg);
+}
+
+.login-icon2 {
+	width: 200px;
+	position: absolute;
+	transform: translate(10vw, 130vh) rotate(0deg);
+	transform-origin: center center;
+	transition: all 4s ease-out;
+}
+
+.logo-icon-anim2 {
+	transform: translate(10vw, -50vh) rotate(0deg);
+}
+
+.login-icon3 {
+	width: 300px;
+	position: absolute;
+	transform: translate(70vw, -50vh) rotate(180deg);
+	transform-origin: center center;
+	transition: all 3s ease-out;
+}
+
+.logo-icon-anim3 {
+	transform: translate(70vw, 100vh) rotate(180deg);
 }
