--- a/src/components/css/menu.css
+++ b/src/components/css/menu.css
@@ -2,8 +2,42 @@
 	position: fixed;
 	right: 0;
 	top: 0;
-	height: 300px;
 	width: 250px;
-	background-color: rgba(42, 75, 165, 0.822);
+	background-color: rgba(0, 0, 0, 0.8);
 	z-index: 400;
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+}
+
+.menu-item {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	border: 2px solid #fff;
+}
+
+.toggle-airports {
+	height: 50px;
+	cursor: pointer;
+}
+
+.new-location {
+	flex-direction: column;
+}
+
+.location-input {
+	height: 40px;
+	border: none;
+}
+
+.location-button {
+	height: 50px;
+	cursor: pointer;
+	border: none;
 }
