--- a/src/components/css/dashboard-airport.css
+++ b/src/components/css/dashboard-airport.css
@@ -1,4 +1,4 @@
-.dashboard-container {
+.dashboard-container2 {
 	width: 100%;
 	height: 350px;
 	background-color: #000;
@@ -7,7 +7,7 @@
 			rgba(0, 0, 0, 0.8),
 			rgba(0, 0, 0, 0.8)
 		),
-		url(../../img/fullHD/dashboard_1920.jpg);
+		url(../../img/fullHD/setup_1920.jpg);
 	background-position: center center;
 	background-size: cover;
 	position: fixed;
@@ -22,17 +22,16 @@
 	transform: translateY(0%);
 }
 
-.dashboard {
+.dashboard2 {
 	width: 70%;
 	margin: 0 auto;
 }
 
-.glareshield {
+.glareshield2 {
 	width: 150px;
 	height: 50px;
 	position: absolute;
-	left: 50%;
-	transform: translate(-50%);
+	left: calc(50vw + 70px);
 	bottom: 100%;
 	background-color: rgba(0, 0, 0, 0.9);
 	cursor: pointer;
@@ -45,13 +44,13 @@
 	border-radius: 2px;
 }
 
-.dashboard-data {
+.dashboard-data2 {
 	height: 350px;
 	display: flex;
 	color: #fff;
 }
 
-.general-data {
+.general-data2 {
 	height: 100%;
 	display: flex;
 	gap: 20px;
@@ -61,7 +60,7 @@
 .aircraft-image {
 }
 
-.current-position-info {
+.current-airport-info {
 	display: flex;
 	flex-direction: column;
 }
