--- a/src/components/css/menu.css
+++ b/src/components/css/menu.css
@@ -11,6 +11,8 @@
 	justify-content: center;
 	align-items: center;
 	gap: 1rem;
+	border-radius: 2px;
+	box-shadow: 2px 2px 5px #000;
 }
 
 .menu-item {
@@ -18,13 +20,21 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border: 2px solid #fff;
+	border: 1px solid #fff;
 }
 
 .toggle-airports {
 	height: 50px;
 	cursor: pointer;
 	color: #fff;
+	border-radius: 2px;
+}
+
+.toggle-windmap {
+	height: 50px;
+	cursor: pointer;
+	color: #fff;
+	border-radius: 2px;
 }
 
 .new-location {
