--- a/src/components/css/menu.css
+++ b/src/components/css/menu.css
@@ -21,6 +21,8 @@
 	justify-content: center;
 	align-items: center;
 	border: 1px solid #fff;
+	font-family: 'Bebas';
+	font-size: 1.2rem;
 }
 
 .toggle-airports {
