--- a/src/components/css/dashboard.css
+++ b/src/components/css/dashboard.css
@@ -18,7 +18,7 @@
 	z-index: 400;
 	transform: translateY(100%);
 	transition: all 0.5s ease-in;
-	border-top: 5px solid #000;
+	border-top: 10px solid #000;
 }
 
 .showing {
@@ -70,6 +70,10 @@
 	gap: 3rem;
 	justify-content: center;
 	align-items: center;
+}
+
+.general-data a {
+	text-decoration: none;
 }
 
 .armin-logo {
